--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
 
             <div class="Speakers">
-                <img src="img/">
+                <img src="	https://res2.weblium.site/res/60b5d551c422d50022b3…c781f0021a737eb_optimized_900_c743x495-94x42.webp" alt="column">
                     <h4>Speakers</h4>
                     <h2>How to Choose a Speaker for Office?</h2>
             </div>
@@ -495,6 +495,7 @@
                 <div class="article_button">
                     <a href="#"> Read more </a>
                 </div>
+
                 <div class="headphones">
                     <img src="img/girl2.png" alt="girl-with-headphones">
                         <h4>Headphones</h4>
