Fixed comments name and replacement tags from <div> to <article> in product cards

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <!--Контакти-->
+        <!--Contacts-->
         <div class="contacts contacts_black">
             <div class="contacts__item">
                 <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
@@ -23,7 +23,7 @@
                 <a href="mailto:basside@email.com">basside@email.com</a>
             </div>
         </div>
-        <!--Навігація-->
+        <!--Navigation-->
         <section class="banner-bg banner-bg_origin">
             <nav class="navigation">
                 <div class="navigation-logo">
@@ -46,7 +46,7 @@
                             alt="youtube"></a>
                 </div>
             </nav>
-            <!--Основна сторінка-->
+            <!--Main page-->
             <div class="banner">
                 <div class="banner__text">
                     <h1>Great Sound at Low Prices</h1>
@@ -60,9 +60,9 @@
         </section>
     </header>
     <main>
-        <!--Перша секція-->
+        <!--Special offers and services section-->
         <section class="first-section">
-            <!--Каруселька з сервісом-->
+            <!--Roundabout with services-->
             <div class="content">
                 <div class="services">
                     <div class="services__type">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Вкладки(таби) для першої секції-->
+                <!--Tabs for special offers and services section-->
                 <div class="tabs">
                     <div class="tabs__head">
                         <a href="#tab_01" class="tabs__name">Featured</a>
@@ -121,9 +121,9 @@
                         <a href="#tab_03" class="tabs__name">New</a>
                     </div>
                     <div class="tabs__body">
-                        <!--Вкладка Featured-->
+                        <!--Tab Featured-->
                         <div id="tab_01" class="tabs__content">
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
                                         alt="jbl RR-56"></a>
                                 <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
@@ -131,9 +131,9 @@
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/featured/sennheiser-sn.png"
                                         alt="Sennheiser SN-67"></a>
                                 <a class="tabs__product-name" href="">Sennheiser SN-67</a>
@@ -141,30 +141,30 @@
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
                                 <a class="tabs__product-name" href="">JBL GT-345</a>
                                 <p>$120,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
                                 <a class="tabs__product-name" href="">Sony S890</a>
                                 <p>$259,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </articlev>
                         </div>
 
-                        <!--Вкладка Sale-->
+                        <!--Tab Sale-->
                         <div id="tab_02" class="tabs__content">
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
                                         alt="Marshal DR67"></a>
                                 <a class="tabs__product-name" href="">Marshal DR67</a>
@@ -172,27 +172,27 @@
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
                                 <a class="tabs__product-name" href="">V-MODA ER65</a>
                                 <p>$80,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
                                 <a class="tabs__product-name" href="">Bose G656-A</a>
                                 <p>$65,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/airpulse-r.png"
                                         alt="AirPulse R255"></a>
                                 <a class="tabs__product-name" href="">AirPulse R255</a>
@@ -200,46 +200,46 @@
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
                         </div>
 
-                        <!--Вкладка New-->
+                        <!--Tab New-->
                         <div id="tab_03" class="tabs__content">
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
                                 <a class="tabs__product-name" href="">Sony YT555</a>
                                 <p>$140,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
                                 <a class="tabs__product-name" href="">Sony TT56</a>
                                 <p>$98,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
                                 <a class="tabs__product-name" href="">JBL BR-55</a>
                                 <p>$110,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
 
-                            <div class="tabs__container">
+                            <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
                                 <a class="tabs__product-name" href="">JBL 334WN</a>
                                 <p>$140,00</p>
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </div>
+                            </article>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                     <div class="offer-jbl">
                         <h2>JBL Speakers</h2>
                         <p><span class="offer__strike">$300.00</span> $250.00</p>
-                        <p>Special price on a variety of JBL loudspeakers.</p>
+                        <p class="offer__text">Special price on a variety of JBL loudspeakers.</p>
                         <a class="offer__button offer__button_black" href=""><span>LEARN MORE</span></a>
                     </div>
                     <div class="offer-special">
