Fixed comments and classes

--- a/index.html
+++ b/index.html
@@ -285,9 +285,8 @@
             level.</p>
     </div>
     </section>
-        <!--Четверта секція (початок)-->
+        <!--Fourth section (beginning)-->
         <section class="fourth-section">
-            <!--Каруселька-->
             <div class="Speakers">
                 <header>
                     <h2>Speakers</h2>
@@ -298,8 +297,9 @@
                         <p>Take your music with you wherever you go and enjoy the high-quality sound.</p>
                     </div>
                 </header>
+                <!--Carousel-->
                 <div class="block_4_content">
-                    <div class="colection_slider">
+                    <div class="Carousel">
                         <button type="button" class="arrow_prev">previous
                         </button>
                         <div class=slick-list>
@@ -415,7 +415,7 @@
                 </button>
             </div>
         </section>
-        <!--Четверта секція (кінець)-->
+        <!--Fourth section (end)-->
 
 <!--Section about news and reviews-->
 
