--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Devices Store Website</title>
     <link rel="icon" href="img/icons/favicon.ico">
+    <link rel="stylesheet" href="css/Index.css">
 </head>
 
 <body>
