Created two ccs style files <main> and <header-section>.Wokred with fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Devices Store Website</title>
     <link rel="icon" href="img/icons/favicon.ico">
+    <link rel="stylesheet" href="css/main-style.css">
 </head>
 
 <body>
@@ -14,46 +15,50 @@
     <header>
         <!--Contacts-->
         <div class="contacts contacts_black">
-            <div class="contacts__item">
-                <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
-                <a href="tel:+12345678900">+1 (234) 567 89 00</a>
-            </div>
-            <div class="contacts__item">
-                <span class="contacts__mail contacts__mail_black">Email:</span>
-                <a href="mailto:basside@email.com">basside@email.com</a>
+            <div class="container-top">
+                <div class="contacts__item contacts__item_white">
+                    <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
+                    <a href="tel:+12345678900">+1 (234) 567 89 00</a>
+                </div>
+                <div class="contacts__item contacts__item_white">
+                    <span class="contacts__mail contacts__mail_black">Email:</span>
+                    <a href="mailto:basside@email.com">basside@email.com</a>
+                </div>
             </div>
         </div>
         <!--Navigation-->
         <section class="banner-bg banner-bg_origin">
-            <nav class="navigation">
-                <div class="navigation-logo">
-                    <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
-                </div>
-                <div class="navigation-pages">
-                    <a href="" class="navigations__headphones">Headphones</a>
-                    <a href="" class="navigations__speakers">Speakers</a>
-                    <a href="" class="navigations__news">News</a>
-                    <a href="" class="navigations__testimonials">Testimonials</a>
-                </div>
-                <div class="navigation-social">
-                    <a href="https://www.facebook.com/" target="blank"><img width="50" src="img/icons/facebook-icon.png"
-                            alt="facebook"></a>
-                    <a href="https://www.instagram.com/" target="blank"><img width="50" src="img/icons/insta-icon.png"
-                            alt="instagram"></a>
-                    <a href="https://twitter.com/" target="blank"><img width="50" src="img/icons/twitter-icon.png"
-                            alt="twitter"></a>
-                    <a href="https://www.youtube.com/" target="blank"><img width="50" src="img/icons/you-toube-icon.png"
-                            alt="youtube"></a>
-                </div>
-            </nav>
-            <!--Main page-->
-            <div class="banner">
-                <div class="banner__text">
-                    <h1>Great Sound at Low Prices</h1>
-                    <p>Headphones and loudspeakers from the best brands.</p>
-                    <div class="links">
-                        <a href="" class="links__about">About us</a>
-                        <a href="" class="links__shop"><span>Shop now</span></a>
+            <div class="container-top">
+                <nav class="navigation">
+                    <div class="navigation-logo">
+                        <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
+                    </div>
+                    <div class="navigation-pages">
+                        <a href="" class="navigations__headphones">Headphones</a>
+                        <a href="" class="navigations__speakers">Speakers</a>
+                        <a href="" class="navigations__news">News</a>
+                        <a href="" class="navigations__testimonials">Testimonials</a>
+                    </div>
+                    <div class="navigation-social">
+                        <a href="https://www.facebook.com/" target="blank"><img 
+                                src="img/icons/facebook-icon.png" alt="facebook"></a>
+                        <a href="https://www.instagram.com/" target="blank"><img 
+                                src="img/icons/insta-icon.png" alt="instagram"></a>
+                        <a href="https://twitter.com/" target="blank"><img  src="img/icons/twitter-icon.png"
+                                alt="twitter"></a>
+                        <a href="https://www.youtube.com/" target="blank"><img 
+                                src="img/icons/you-toube-icon.png" alt="youtube"></a>
+                    </div>
+                </nav>
+                <!--Main page-->
+                <div class="banner">
+                    <div class="banner__text">
+                        <h1>Great Sound at Low Prices</h1>
+                        <p>Headphones and loudspeakers from the best brands.</p>
+                        <div class="links">
+                            <a href="" class="links__about">About us</a>
+                            <a href="" class="links__shop"><span>Shop now</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -63,7 +68,7 @@
         <!--Special offers and services section-->
         <section class="first-section">
             <!--Roundabout with services-->
-            <div class="content">
+            <div class="container-top">
                 <div class="services">
                     <div class="services__type">
                         <div class="item">
@@ -159,7 +164,7 @@
                                 <form action="#" method="get">
                                     <button class="tabs__button" type="submit">Add to cart</button>
                                 </form>
-                            </articlev>
+                                </article>
                         </div>
 
                         <!--Tab Sale-->
@@ -259,32 +264,34 @@
             </div>
         </section>
         <!--Second page-->
-        <section class="second-section"
-                  <div class="Heading">
-        <h2>Mindblowing Sound in Our Store</h2>
-        <p>Discover the world of high-quality sound and enjoy your favorite tracks with Basside online store.</p>
-        <P>Basside knows everything about the riffs, percussions, and baselines. We will help you choose the best
-            headphones
-            and speakers to hear the thinnest tones that have always been there.</p>
-    </div>
-    <div class="Secondheading">
-        <h3>All Kinds of Headphones</h3>
-        <p>We sell headphones by famous brands (from Sennheiser to Bang & Olufsen), including models for gaming.</p>
-        <h3>Top Loudspeakers</h3>
-        <p>Enjoy your favorite music everywhere — outdoors, in the office, at home, and at parties. </p>
-        <h3>Wireless Connection</h3>
-        <p>We offer many wireless models of headphones and loudspeakers for your comfort. </p>
-    </div>
-    <div class="OrangeBlock">
-        <h2>JBL Speaker</h2>
-        <h3>Model</h3>
-        <p>JBL HY-F2234</p>
-        <h3>Details</h3>
-        <p>This wireless model delivers a bass-heavy sound. You can enjoy your favorite songs whenever you are, thanks
-            to powerful radiators and full-range speakers. JBL will take your music listening experience to the next
-            level.</p>
-    </div>
-    </section>
+        <section class="second-section" <div class="Heading">
+            <h2>Mindblowing Sound in Our Store</h2>
+            <p>Discover the world of high-quality sound and enjoy your favorite tracks with Basside online store.</p>
+            <P>Basside knows everything about the riffs, percussions, and baselines. We will help you choose the best
+                headphones
+                and speakers to hear the thinnest tones that have always been there.</p>
+            </div>
+            <div class="Secondheading">
+                <h3>All Kinds of Headphones</h3>
+                <p>We sell headphones by famous brands (from Sennheiser to Bang & Olufsen), including models for gaming.
+                </p>
+                <h3>Top Loudspeakers</h3>
+                <p>Enjoy your favorite music everywhere — outdoors, in the office, at home, and at parties. </p>
+                <h3>Wireless Connection</h3>
+                <p>We offer many wireless models of headphones and loudspeakers for your comfort. </p>
+            </div>
+            <div class="OrangeBlock">
+                <h2>JBL Speaker</h2>
+                <h3>Model</h3>
+                <p>JBL HY-F2234</p>
+                <h3>Details</h3>
+                <p>This wireless model delivers a bass-heavy sound. You can enjoy your favorite songs whenever you are,
+                    thanks
+                    to powerful radiators and full-range speakers. JBL will take your music listening experience to the
+                    next
+                    level.</p>
+            </div>
+        </section>
         <!--Fourth section (beginning)-->
         <section class="fourth-section">
             <div class="Speakers">
@@ -417,7 +424,7 @@
         </section>
         <!--Fourth section (end)-->
 
-<!--Section about news and reviews-->
+        <!--Section about news and reviews-->
 
         <section class="brand logos">
             <!--roundabout brand logos-->
@@ -485,9 +492,10 @@
             </div>
 
             <div class="Speakers">
-                <img src="	https://res2.weblium.site/res/60b5d551c422d50022b3…c781f0021a737eb_optimized_900_c743x495-94x42.webp" alt="column">
-                    <h4>Speakers</h4>
-                    <h2>How to Choose a Speaker for Office?</h2>
+                <img src="	https://res2.weblium.site/res/60b5d551c422d50022b3…c781f0021a737eb_optimized_900_c743x495-94x42.webp"
+                    alt="column">
+                <h4>Speakers</h4>
+                <h2>How to Choose a Speaker for Office?</h2>
             </div>
 
             <div class="text">
@@ -498,8 +506,8 @@
 
                 <div class="headphones">
                     <img src="img/girl2.png" alt="girl-with-headphones">
-                        <h4>Headphones</h4>
-                        <h2>Top 5 New Headphones</h2>
+                    <h4>Headphones</h4>
+                    <h2>Top 5 New Headphones</h2>
                 </div>
                 <div class="text">
                     <p>Spring 2021 has brought a lot of new products from top wireless headphone manufacturers.</p>
@@ -509,15 +517,15 @@
 
                     <div class="Speakers">
                         <img src="img/">
-                            <h4>Speakers</h4>
-                            <h2>Home Usage of Loudspeakers</h2>
+                        <h4>Speakers</h4>
+                        <h2>Home Usage of Loudspeakers</h2>
                     </div>
                     <div class="text">
                         <p>A speaker for home should be inexpensive, durable, and with added features, right?</p>
 
                         <a href="#"> Read more </a>
-                        </div>
                     </div>
+                </div>
 
         </section>
 
