--- a/product-card.html
+++ b/product-card.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" href="img/icons/favicon.ico">
+    <link rel="stylesheet" href="css/main-style.css">
 </head>
 
 <body>
@@ -16,13 +17,15 @@
             <!--Контакти-->
 
             <div class="contacts contacts_white">
-                <div class="contacts__item">
-                    <span class="contacts__cellphone contacts__cellphone_white">Customer Care:</span>
-                    <a href="tel:+12345678900">+1 (234) 567 89 00</a>
-                </div>
-                <div class="contacts__item">
-                    <span class="contacts__mail contacts__mail_white">Email:</span>
-                    <a href="mailto:basside@email.com">basside@email.com</a>
+                <div class="container-top">
+                    <div class="contacts__item contacts__item_black">
+                        <span class="contacts__cellphone contacts__cellphone_white">Customer Care:</span>
+                        <a href="tel:+12345678900">+1 (234) 567 89 00</a>
+                    </div>
+                    <div class="contacts__item contacts__item_black">
+                        <span class="contacts__mail contacts__mail_white">Email:</span>
+                        <a href="mailto:basside@email.com">basside@email.com</a>
+                    </div>
                 </div>
             </div>
             <!--Навігація-->
