css styles for <max-width 380 px>

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!--Special offers and services section-->
         <section class="first-section">
             <!--Roundabout with services-->
-            <div class="container-top">
+            <!-- <div class="container-top"> -->
                 <div class="services">
                     <div class="services__type">
                         <div class="item">
@@ -260,7 +260,7 @@
                     <div class="offers-cotainer">
                         <div class="offer-jbl">
                             <h2>JBL Speakers</h2>
-                            <p><span class="offer__strike">$300.00</span> $250.00</p>
+                            <p class="offer__strike"><span >$300.00</span> $250.00</p>
                             <p class="offer__text">Special price on a variety of JBL loudspeakers.</p>
                             <a class="offer__button offer__button_black" href=""><span>LEARN MORE</span></a>
                         </div>
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </section>
         <!--Second page-->
         <section class="second-section" <div class="Heading">
