--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <section class="fourth-section">
             <div class="Speakers">
                 <header>
-                    <h2>SpeakersS</h2>
+                    <h2>Speakers</h2>
                     <div class="picture">
                         <img width="100" src="img/de2.svg" alt="">
                     </div>
