--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <section class="Our customers Say">
             <h2>Our Customers Say</h2>
             <img src="img/logo-main.svg" alt="Main" width="200">
-            <h4>We're so excited to receive great testimonials from our customers!</h4>
+            <p>We're so excited to receive great testimonials from our customers!</p>
             <div class="person1">
                 <img src="img/man-with-headphones.png" alt="man-with-headphones" width="200">
 
@@ -517,7 +517,7 @@
             <div class="Popular Articles">
                 <h2>Popular Articles</h2>
                 <img src="img/logo-main.svg" alt="Main" width="200">
-                <h4>Want to learn more about the world of audio gadgets? Follow our blog posts!</h4>
+                <p>Want to learn more about the world of audio gadgets? Follow our blog posts!</p>
             </div>
             <div class="Articles-container">
             </div>
@@ -527,7 +527,7 @@
 
                 <img src="img/Big-column.png" alt="Big-column" width="200">
                 <h4>Speakers</h4>
-                <h2>How to Choose a Speaker for Office?</h2>
+                <p>How to Choose a Speaker for Office?</p>
             </div>
 
             <div class="text">
@@ -544,7 +544,7 @@
 
                     <img src="img/girl2.png" alt="girl-with-headphones" width="200">
                     <h4>Headphones</h4>
-                    <h2>Top 5 New Headphones</h2>
+                    <p>Top 5 New Headphones</p>
                 </div>
                 <div class="text">
                     <p>Spring 2021 has brought a lot of new products from top wireless headphone manufacturers.</p>
@@ -557,7 +557,7 @@
 
                         <img src="img/small-column.png" alt="small-column" width="200">
                         <h4>Speakers</h4>
-                        <h2>Home Usage of Loudspeakers</h2>
+                        <p>Home Usage of Loudspeakers</p>
                     </div>
                     <div class="text">
                         <p>A speaker for home should be inexpensive, durable, and with added features, right?</p>
