--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
 
                 </div>
-
+                <br>
                 <div class="headphones">
 
                     <img src="img/girl2.png" alt="girl-with-headphones" width="200">
@@ -550,9 +550,10 @@
                     <p>Spring 2021 has brought a lot of new products from top wireless headphone manufacturers.</p>
                     <div class="article-button">
                         <a href="#"> Read more </a>
+                        
                         <img src="img/line.svg" alt="Line" width="100">
                     </div>
-
+                    <br>
                     <div class="Speakers">
 
                         <img src="img/small-column.png" alt="small-column" width="200">
@@ -561,10 +562,11 @@
                     </div>
                     <div class="text">
                         <p>A speaker for home should be inexpensive, durable, and with added features, right?</p>
-
+                        <div class="article-button">
                         <a href="#"> Read more </a>
                         <img src="img/line.svg" alt="Line" width="100">
                     </div>
+                    <br>
                 </div>
             </div>
 
