--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="Speakers">
                 <header>
                     <h2>Speakers</h2>
-                    <img width="100" src="img/de2.svg" alt="logo">
+                        <img class="logo" width="100" src="img/de2.svg" alt="logo">
                     <p>Take your music with you wherever you go and enjoy the high-quality sound.</p>
                 </header>
                 <!--Carousel-->
@@ -312,7 +312,7 @@
                         <button type="button" class="arrow_prev">previous
                         </button>
                     </div>
-                    <div class=products>
+                    <div class="products">
                         <article>
                             <div class="product_card">
                                 <a href="/shop/sony-yt555">
