--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
 
         <!--Section about news and reviews-->
 
+        <header>
         <section class="brand logos">
             <!--roundabout brand logos-->
             <div class="cards-container">
@@ -469,6 +470,7 @@
 
         </section>
         <!--roundabout reviews-->
+        <article class="Our customers Say">
         <section class="Our customers Say">
             <h2>Our Customers Say</h2>
             <div class="logo-main">
@@ -514,6 +516,7 @@
                 <h4>May 29,2021</h4>
             </div>
         </section>
+        </article>
 
         <article class="News">
            
@@ -583,7 +586,7 @@
             </div>
 
         </article>
-
+</header>
         <!--Шоста секція-->
 
         <section>
