--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
                 </div>
             </div>
             <div class="video">
-                <h2>14 Hours of music</h2>
-                <p>Enjoy freedom of movement with wireless headphones.</p>
+                <h2 class="video-header">14 Hours of music</h2>
+                <p class="video-text">Enjoy freedom of movement with wireless headphones.</p>
                 <button class="play_button" type="button">Play</button>    
             </div>
         </section>
