Added colors and text <var> add responsive for banner page < from 380px to 1024px>

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
         <!--Contacts-->
         <div class="contacts contacts_black">
-            <div class="container-top">
+            <div class="container-top_contacts">
                 <div class="contacts__item contacts__item_white">
                     <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
-                    <a href="tel:+12345678900">+1 (234) 567 89 00</a>
+                    <a  href="tel:+12345678900">+1 (234) 567 89 00</a>
                 </div>
-                <div class="contacts__item contacts__item_white">
+                <div class="contacts__item contacts__item_white contacts__item_white_l">
                     <span class="contacts__mail contacts__mail_black">Email:</span>
-                    <a href="mailto:basside@email.com">basside@email.com</a>
+                    <a  href="mailto:basside@email.com">basside@email.com</a>
                 </div>
             </div>
         </div>
