--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Devices Store Website</title>
     <link rel="icon" href="img/icons/favicon.ico">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/main-style.css">
-    <link rel="stylesheet" href="css/Index.css">
 </head>
 
 <body>
@@ -72,7 +72,8 @@
         <!--Special offers and services section-->
         <section class="first-section">
             <!--Roundabout with services-->
-            <!-- <div class="container-top"> -->
+                
+            <!-- End of carousel -->
             <div class="services">
                 <div class="services__type">
                     <div class="item">
@@ -122,6 +123,7 @@
                     </div>
                 </div>
             </div>
+            
             <!--Tabs for special offers and services section-->
             <div class="container-top">
                 <div class="tabs">
@@ -775,6 +777,7 @@
 
 
     </main>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
